src/objects/Demographic_information__c.object
<CustomObject>
    <description>This is a generic template for Custom Object.  With this template, you may adjust the default elements and values and add new elements and values.</description>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Demographic information</relationshipLabel>
        <relationshipName>Demographic_information</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Email_Opt_in__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Email Opt-in</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ethnic_Group_Other__c</fullName>
        <label>Ethnic Group - Other</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ethnic_Group__c</fullName>
        <label>Ethnic Group</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>White - English / Welsh / Scottish / Northern Irish / British</fullName>
                </value>
                <value>
                    <fullName>White - Irish</fullName>
                </value>
                <value>
                    <fullName>White - Gypsy or Irish Traveller</fullName>
                </value>
                <value>
                    <fullName>White - Any other White background (please specify)</fullName>
                </value>
                <value>
                    <fullName>Asian/Asian British – Indian</fullName>
                </value>
                <value>
                    <fullName>Asian/Asian British - Pakistani</fullName>
                </value>
                <value>
                    <fullName>Asian/Asian British - Bangladeshi</fullName>
                </value>
                <value>
                    <fullName>Asian/Asian British - Chinese</fullName>
                </value>
                <value>
                    <fullName>Asian/Asian British - Any other Asian background (please specify)</fullName>
                </value>
                <value>
                    <fullName>Black/African/Caribbean/Black British – Caribbean</fullName>
                </value>
                <value>
                    <fullName>Black/African/Caribbean/Black British – African</fullName>
                </value>
                <value>
                    <fullName>Black/African/Caribbean/Black British – Any other Black background (please specify)</fullName>
                </value>
                <value>
                    <fullName>Mixed/Multiple Ethnic Groups – White &amp; Black Caribbean</fullName>
                </value>
                <value>
                    <fullName>Mixed/Multiple Ethnic Groups – White and Black African</fullName>
                </value>
                <value>
                    <fullName>Mixed/Multiple Ethnic Groups – White and Asian</fullName>
                </value>
                <value>
                    <fullName>Mixed/Multiple Ethnic Groups – Any other mixed background (please specify)</fullName>
                </value>
                <value>
                    <fullName>Other Ethnic Group – Arab</fullName>
                </value>
                <value>
                    <fullName>Other Ethnic Group – Any other Ethnic Group</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Post_Opt_out__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Post Opt-out</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Proximity_to_dementia__c</fullName>
        <label>Proximity to dementia</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Person with dementia</fullName>
                </value>
                <value>
                    <fullName>Family or Friend</fullName>
                </value>
                <value>
                    <fullName>Past Family or Friend</fullName>
                </value>
                <value>
                    <fullName>Carer</fullName>
                </value>
                <value>
                    <fullName>Past Carer</fullName>
                </value>
                <value>
                    <fullName>Dementia Professional</fullName>
                </value>
                <value>
                    <fullName>Interested In Dementia</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Demographic information</label>
    <nameField>
        <displayFormat>DG{000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Demographic information</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>